fix box alignment

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .head-container {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    /*align-items: flex-start;*/
     /* font-size: 24px; */
      /* color:#F9FAF8; */
 }
